--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,15 @@
 {
   "name": "rafos/tdd-workshop-php",
-  "require": {},
+  "require": {
+    "php": "^8.5"
+  },
   "require-dev": {
     "phpunit/phpunit": "^11.0"
+  },
+  "config": {
+    "platform": {
+      "php": "8.5.0"
+    }
   },
   "autoload": {
     "psr-4": {
